--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -8,17 +8,75 @@ Note, hasAnnotation, tracedTo, wasRevisionOf, hadOriginalSource,
 wasQuotatedFrom, hadQuotatedAgent, hadQuoterAgent, wasSummaryOf, 
 alternateOf, terms related to Collection? Bundle? Role?? , hadRole, 
 Location??, hadLocation?, wasStartedByActivity?? specializationOf?
-DanielG: I'd say that hadRole, hadLocation, collection, bundle, location, alternate, specialization should not be here.
 *****End comments*********
        -->
 
-        <p>This section defines additional terms to describe provenance at a greater level of specificity (for example, <a href="#Person" class="qname">prov:Person</a> or <a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a> in place of <a href="#Agent" class="qname">prov:Agent</a>) and with more details (for example, <a href="#Location" class="qname">prov:Location</a> to describe the address of a <a href="#Organization" class="qname">prov:Organization</a>). In addition, the new terms in this section facilitate modeling of common provenance assertions related to web resources. For example, different version of a web page can be represented using the <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> property and the <a href="#hadOriginalSource" class="qname">prov:hadOriginalSource</a> property can be used to reference the original source of information used in a web resource. Many of the properties introduced in this section are also "shortcut" notations for combining the PROV-O terms introduced in Section 3.1 "Starting Point Terms", which make it easier for provenance annotation of a resource. 
+        <p>This section defines additional terms for describing provenance at a greater level of specificity in Agents (i.e., <a href="#Person" class="qname">prov:Person</a> or
+		<a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a> and <a href="#Organization" class="qname">prov:Organization</a>) and entities 
+		(<a href="#specializationOf" class="qname">prov:specializationOf</a> and <a href="#AlternateOf" class="qname">prov:AlternateOf</a>). 
+		</p>
+		<p>
+		Additionally, some of these terms provide the means to assert extended details about the concepts introduced in section 3.1
+		(<a href="#wasStartedBy" class="qname">prov:wasStartedBy</a> and (<a href="#wasEndedBy" class="qname">prov:wasEndedBy</a> in activities 
+		 and <a href="#Location" class="qname">prov:Location</a> in entities).
+		 
+		Further annotations on provenance records can be done through <a href="#Note" class="qname">prov:Notes</a>, although we can group the provenance statements in 
+		<a href="#Account" class="qname">prov:Accounts</a> in order to keep the record of the provenance metadata itself.
+		</p>
+		<p>
+		The new terms in this section also facilitate the modeling of common provenance assertions related to web resources. 
+		For example, different versions of a web page can be represented using the <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> 
+		property, the <a href="#hadOriginalSource" class="qname">prov:hadOriginalSource</a> property can be used to reference the original source
+		of information used in a web resource and users can quote existent entities using the <a href="#wasQuotedFrom" class="qname">prov:wasQuotedFrom</a> property. 
+		For expressing the dependency between two different entities, users can assert the <a href="#tracedTo" class="qname">prov:tracedTo</a> property.
+		
         </p>
 
         <div class="exampleOuter">
-           <p>We illustrate the use of the new terms using an example below </p> 
-           <pre class="example">
-              {% include "includes/eg-22-blog-original-source.ttl" %}
-           </pre>
+           <p>We illustrate below the use of the expanded terms using the crime file example from the previous section as reference. Agent Dereck now publishes a post about
+		   his work with the aggregated file, while Monica publishes an alternate version to reach a more casual audience.
+		   </p> 
+		   
+		   <pre class="example">
+		   {% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt1.ttl" %}
+		   </pre> 
+		   
+		   <p>
+		   Agent ex:dereck, acting again in behalf of the ex:chartgenerators organization, 
+		   publishes a post about his recent changes to the aggregated file (ex:aggregatedByRegions). He also provides the location for the crime file, so everyone knows the content he has been browsing, 
+		   and records the city where the publishing took place (Madrid). Since he is the one who started and ended the publishing activity (ex:publicationActivity1123), that information
+		   is recorded as well. The post produced by ex:dereck(ex:post9821) includes a permanent link where the content of the latest version is shown
+		   (ex:more-crime-happens-in-cities) plus a snapshot of the content of the current version (ex:postContent0). Dereck also adds additional metadata of the post, like the title.
+		   </p>
+		   <p>
+		   However, inmediately after having published the post, Dereck detects a typo. He doesnt' want to record the activity that led to the new version, so he just creates a new version and 
+		   summarizes the changes in a revision of the original post(ex:post9821v1). This revision is also a specialization of the original post, since it is a refined version. 
+		   Thus, the location of the new revision has the same permalink, but a different url for its snapshot (ex:postContent1).
+		   </p>
+		   <p>
+		   Shortly after Dereck's post publication, ex:monica adapts the text for a wider audience in a new version (ex:post9821v2). This version is an specialization of the original post,
+		   and an alternate of the first version modified by Dereck. Since the provenance produced by Dereck and Monica is related to the same resources, the system
+		   automatically groups it in the same prov:Account (ex:accountPost).
+		   </p>
+		   <p>
+		   Some time passes by, and John writes his own conclusions quoting the previous two posts:
+		   </p> 
+		   
+		   <pre class="example">
+		   {% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt2.ttl" %}
+		   </pre> 
+		   
+		   <p>
+		   Agent ex:John also names the URI of the original source (ex:aggregatedByRegions). All the provenance statements related to his post
+		   are grouped in a new prov:Account (ex:accountPost2).
+		   
+		   Finally, a web crawler (ex:boogleParser) parses the second post. The crawler acts in behalf of Boogle, an organization that want to index the posts. It also adds an 
+		   annotation on the second account (ex:accountPost2), stating at which date the parsing was made.
+		   </p> 		   
+		   
+		   <pre class="example">
+		   {% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt3.ttl" %}
+		   </pre>
+ 
         </div>
 	  </section>
